--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-include-cache
 
 # Theme-specific settings
 
